--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>expenses-chart-component-main</title>
+    <title>Expenses Chart</title>
 </head>
 <body>
     <main class="container">
@@ -69,7 +69,6 @@
             </div>
         </div>
     </main>
-    <script src="js/data.json"></script>
     <script src="js/script.js"></script>
     
 </body>
